syntax = "proto3";

package store;

import "product.proto";
import "supplier.proto";

message LineItemRequest {
  uint32 id = 1;
}

message LineItem {
  uint32 id = 1;
  Product product = 2;
  uint32 quantity = 3;
  double total_cost = 4;
  Supplier supplier = 5;
  string source = 6;
}
