syntax = "proto3";

package store;

import "lineItem.proto";

service Store {
  rpc GetLineItem (LineItemRequest) returns (LineItem) {}
}
